hphp/test/slow/class_constant/globals-array.php.expectf
Fatal error: syntax error, unexpected T_VARIABLE in %s/globals-array.php on line 5
